Fixed issue with text wrapping

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -130,6 +130,8 @@ body {
   text-align: center;
   font-size: 0.8em;
   line-height: 1.5em;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .sorter > .left {
